[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/Ball.png" type="Texture" id=1]
[ext_resource path="res://objects/Ball.gd" type="Script" id=2]
[ext_resource path="res://objects/Hitbox.gd" type="Script" id=3]
[ext_resource path="res://assets/Glow.png" type="Texture" id=4]
[ext_resource path="res://assets/sounds/sfx/Explosion 63.wav" type="AudioStream" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 64.0

[sub_resource type="CircleShape2D" id=2]
radius = 96.0

[node name="Ball" type="RigidBody2D"]
collision_layer = 2
collision_mask = 3
contacts_reported = 7
contact_monitor = true
linear_damp = 2.0
angular_damp = 100.0
script = ExtResource( 2 )

[node name="Graphics" type="Node2D" parent="."]

[node name="Glow" type="Sprite" parent="Graphics"]
visible = false
texture = ExtResource( 4 )

[node name="Ball" type="Sprite" parent="Graphics"]
z_index = 1
texture = ExtResource( 1 )

[node name="Face" type="Sprite" parent="Graphics"]
z_index = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 4
script = ExtResource( 3 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 1 )

[node name="MouseHitbox" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="MouseHitbox"]
z_index = 100
shape = SubResource( 2 )

[node name="PopNoise" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
bus = "Sfx"

[node name="MergeTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="PointsTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="body_entered" from="." to="." method="_on_Ball_body_entered"]
[connection signal="body_entered" from="Hitbox" to="Hitbox" method="pop"]
[connection signal="mouse_entered" from="MouseHitbox" to="." method="_on_Ball_mouse_entered"]
[connection signal="mouse_exited" from="MouseHitbox" to="." method="_on_Ball_mouse_exited"]
[connection signal="finished" from="PopNoise" to="." method="_on_PopNoise_finished"]
[connection signal="timeout" from="MergeTimer" to="." method="_on_MergeTimer_timeout"]
[connection signal="timeout" from="PointsTimer" to="." method="_on_PointsTimer_timeout"]
